todos simulados feitos

--- a/Av Intermediaria/AI_23-2.ipynb
+++ b/Av Intermediaria/AI_23-2.ipynb
@@ -120,7 +120,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "$$\n",
+    "ABXDD^{-1} = CDBAD^{-1}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "ABX = CDBAD^{-1}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "ABX = CDDD^{-1}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "CX = CD\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "C^{-1}CX = C^{-1}CD\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "X = D\n",
+    "$$"
+   ]
   },
   {
    "attachments": {},
@@ -140,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,12 +206,8 @@
     "\n",
     "image_ = np.zeros_like(image)\n",
     "\n",
-    "\n",
-    "\n",
     "Xd = criar_indices(0,768, 0, 1024)\n",
     "Xd = np.vstack((Xd, np.ones(Xd.shape[1])))\n",
-    "\n",
-    "# Matriz RGB -> YIQ\n",
     "\n",
     "\n",
     "matriz_translacao = np.array([[1, 0 ,-(image.shape[0]/ 2)], [0, 1, -(image.shape[1]/ 2)], [0, 0, 1]])\n",
@@ -215,10 +236,6 @@
     "X_ = T @ X\n",
     "\n",
     "image_ = X_.T.reshape(altura, largura, cores).astype(int)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.subplot(1,2,1)\n",
@@ -267,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +296,7 @@
        "       [ 8.]])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +326,7 @@
        "array([689.])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
