--- a/Avaliação Intermediária 23-1/prova1.ipynb
+++ b/Avaliação Intermediária 23-1/prova1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +69,33 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.00000000e+00, 1.33226763e-14],\n",
+       "       [1.19015908e-14, 1.00000000e+00]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[1, 3], [2, 1]])\n",
+    "B = np.array([[2, 3], [5, 8]])\n",
+    "\n",
+    "C = A @ B\n",
+    "D = B @ A\n",
+    "\n",
+    "X = (A @ B @ np.linalg.inv(C) @ B @ A @ np.linalg.inv(D)).T * A\n",
+    "\n",
+    "X"
+   ]
   },
   {
    "attachments": {},
@@ -97,14 +114,65 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$\n",
+    "translacao para ponto (0,0) = \n",
+    "\\begin{bmatrix}\n",
+    "    1 & 0 & -300 \\\\\n",
+    "    0 & 1 & -300 \\\\\n",
+    "    0 & 0 & 1\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "compressaometade = \n",
+    "\\begin{bmatrix}\n",
+    "    0.5 & 0 & 0 \\\\\n",
+    "    0 & 0.5 & 0 \\\\\n",
+    "    0 & 0 & 1\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "translacao para ponto original = \n",
+    "\\begin{bmatrix}\n",
+    "    1 & 0 & 300 \\\\\n",
+    "    0 & 1 & 300 \\\\\n",
+    "    0 & 0 & 1\n",
+    "\\end{bmatrix}\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.5,   0. , 150. ],\n",
+       "       [  0. ,   0.5, 150. ],\n",
+       "       [  0. ,   0. ,   1. ]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translacao_1 = np.array([[1, 0, -300], [0, 1, -300], [0, 0, 1]])\n",
+    "\n",
+    "compressao = np.array([[0.5, 0, 0], [0, 0.5, 0], [0, 0, 1]])\n",
+    "\n",
+    "translacao_2 = np.array([[1, 0, 300], [0, 1, 300], [0, 0, 1]])\n",
+    "\n",
+    "M = translacao_2 @ compressao @ translacao_1\n",
+    "\n",
+    "M"
+   ]
   },
   {
    "attachments": {},
@@ -135,14 +203,97 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1 e 2, 3 e 4, 5 e 6, essas duplas sao carteiras que possuem mesmas acoes apenas em quantidades diferentes, ou seja, possuem a mesma informacao.\n",
+    "Por isso considerarei apenas as carteiras 1, 3 e 5"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "c1 = np.array([100, 200, 0])\n",
+    "c2 = np.array([0, 200, 300])\n",
+    "c3 = np.array([1000, 0, 100])\n",
+    "\n",
+    "c = np.vstack((c1, c2, c3))\n",
+    "\n",
+    "r = np.array([[100], [500], [1500]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c: carteiras\n",
+    "x: matriz_retornos_por_acao\n",
+    "r: retornos_totais\n",
+    "\n",
+    "$$cx = r$$\n",
+    "$$c^{-1}cx = c^{-1}r$$\n",
+    "$$x = c^{-1}r$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.32258065],\n",
+       "       [-0.16129032],\n",
+       "       [ 1.77419355]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.linalg.inv(c) @ r\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. O retorno da acao E1 é de 1.32258065 vezes o seu valor, da E2 é de -0.16129032 e da E3 de 1.77419355."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([632.25806452])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c_nova = np.array([100, 200, 300])\n",
+    "retorno_total = c_nova @ X\n",
+    "retorno_total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "632.25806452 reais"
+   ]
   },
   {
    "attachments": {},
@@ -184,14 +335,108 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Primeiro precisamos encontrar a matriz que faz as seguintes transformacoes:\n",
+    "\n",
+    "* $[-2, 3] \\rightarrow [-6, 2]$\n",
+    "* $[2, 3] \\rightarrow [6, 1]$\n",
+    "* $[0, 0] \\rightarrow [3, 0]$\n",
+    "\n",
+    "Para levar o ponto (0, -3) para seu destino e em seguida calcular a distancia entre esse novo ponto e (3, 0)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.00000000e-01,  8.00000000e-01, -1.20000000e+00],\n",
+       "       [ 2.00000000e-01,  2.40000000e+00, -6.00000000e-01],\n",
+       "       [-1.38777878e-17, -2.22044605e-16,  1.00000000e+00]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v1 = np.array([-2, 3])\n",
+    "v2 = np.array([2, 3])\n",
+    "v3 = np.array([0, 0])\n",
+    "\n",
+    "v = np.vstack([v1, v2, v3]).T\n",
+    "v = np.vstack((v, np.ones(v.shape[1])))\n",
+    "\n",
+    "w1 = np.array([-6, 2])\n",
+    "w2 = np.array([6, 1])\n",
+    "w3 = np.array([3, 0])\n",
+    "\n",
+    "w = np.vstack([w1, w2, w3]).T\n",
+    "w = np.vstack((w, np.ones(w.shape[1])))\n",
+    "\n",
+    "B = v @ np.linalg.inv(w)\n",
+    "\n",
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6. ],\n",
+       "       [-1.5],\n",
+       "       [ 1. ]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ponto_queixo = np.array([[0], [-3], [1]])\n",
+    "ponto_novo_queixo = np.linalg.inv(B) @ ponto_queixo\n",
+    "\n",
+    "ponto_novo_queixo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O ponto destino do queixo sera (6, -1.5), agora calculamos a distancia entre ele e (3, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3541019662496847"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distancia_2 = ((6 - 3) ** 2) + ((-1.5 - 0) ** 2)\n",
+    "distancia = distancia_2 ** 0.5\n",
+    "distancia"
+   ]
   }
  ],
  "metadata": {
@@ -210,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
